@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: December 21, 2009</p>
+      <p>Last Updated: December 31, 2009</p>
     </td>
   </tr>
 </table>
@@ -1670,6 +1670,9 @@ nuttx-5.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 	* arch/arm/src/lpc313x and arch/arm/include/lpc313x: Added framework
 	  to support the NXP LPC3131 MCU
+	* Add configs/ea3131.  The LPC3131 port for the Embedded Artist EA3131
+	  (LPC3131) is code complete and waiting for me to get hardware in
+	  hand.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
